# ydb-unofficial

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
src/: auth.rs  client.rs  error.rs  exper.rs  lib.rs  main.rs  payload.rs  pool.rs  reimport.rs  test.rs
src/asa/: mod.rs
src/auth/: cli.rs  mod.rs  sa.rs  service_account.rs
src/sqlx/: connection.rs  convert.rs  database.rs  dumb.rs  entities.rs  error.rs  executor.rs  migration.rs  mod.rs  prelude.rs  query.rs  statement.rs  transaction.rs  types.rs  value.rs
src/sqlx/minikql/: mod.rs  test.rs
test/: example.protobytes  select_bots.protobytes
test/migrations/: 001_create_tables.sql  002_create_indexes.sql
