[package]
name = "ydb-unofficial"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["database","db","ydb"]
description = "Unofficial Ydb client library written on rust"
repository = "https://hub.mos.ru/bool.rus/ydb-unofficial.git"

[package.metadata.docs.rs]
features = ["pool", "auth-sa", "auth-cli"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = true 

[features]
pool = ["dep:deadpool"]
auth-sa = ["dep:yandex-cloud", "dep:jwt-simple", "dep:serde", "dep:serde_json"]
auth-cli = ["tokio/process"]
sqlx = ["dep:sqlx-core"]

[dependencies]
tonic = "0.9.2" 
tokio = { version = "1.29.1" }
ydb-grpc-bindings = "0.0.1"
prost = "0.11.2"
ctor = "0.2.0"
tower = "0.4.13"
rand = "0.8.5"
log = "0.4.17"
thiserror = "1.0.40"

# for sqlx
sqlx-core = {version = "0.7.1", optional = true }
futures = "0.3.28"
nom = "7.1.3"

# for pool
deadpool = { version ="0.9.5", optional = true }
async-trait = "0.1.72"

# for service account auth
yandex-cloud    = { version = "2023.6.13",  optional = true }
jwt-simple      = { version = "0.11.6",     optional = true }
serde           = { version = "1.0.171",    optional = true }
serde_json      = { version = "1.0.102",    optional = true }

[dev-dependencies]
tokio = {version = "1.29.1", features = ["full"]}
